# TagIO_Server

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  EMERGENCY.md  LICENSE  README.md  analyze_binary_size.ps1  build_optimized.ps1  client_config.md  client_port_fix.md  client_troubleshooting.md  connection_tools_readme.md  docker-compose.yml  git_commit.bat  http_tunnel_server.rs  optimize_binary_size.ps1  render.yaml  server_architecture_document.md  tagio_client_communication_guide.md  test_tagio_connection.ps1  test_tagio_protocol.rs
.cargo/: config.toml
.cursor/: settings.json
.cursor/rules/: deploy_emergency.md  error_handling.md  rust.mdc
TagIO/: Cargo.toml
TagIO/src/: app.rs  main.rs  relay_client.rs  tls.rs  ui.rs
atk-sys-dummy/: Cargo.toml
atk-sys-dummy/src/: lib.rs
cairo-sys-rs-dummy/: Cargo.toml
cairo-sys-rs-dummy/src/: lib.rs
docs/: BINARY_SIZE_OPTIMIZATION.md  render_server.md
gdk-sys-dummy/: Cargo.toml
gdk-sys-dummy/src/: lib.rs
gtk-sys-dummy/: Cargo.toml
gtk-sys-dummy/src/: lib.rs
pango-sys-dummy/: Cargo.toml
pango-sys-dummy/src/: lib.rs
src/: cert_utils.rs  client.rs  config.rs  constants.rs  debug_logging.rs  http.rs  input.rs  lib.rs  logger.rs  main.rs  main_gui.rs  main_gui_eframe.rs  main_gui_windows.rs  main_gui_windows_entry.rs  messages.rs  network_speed.rs  protocol.rs  screen_capture.rs  server.rs  websocket.rs
src/gui/: eframe_app.rs  eframe_connection.rs  eframe_ui.rs  mod.rs
src/nat_traversal/: client.rs  communication.rs  mod.rs  nat_client.rs  server.rs
src/nat_traversal_mod/: client.rs  communication.rs  mod.rs  nat_client.rs  server.rs
src/p2p_tls/: client.rs  mod.rs  server.rs  stream.rs  util.rs
src/relay/: client.rs  constants.rs  messages.rs  mod.rs  server.rs
src/streaming/: client.rs  encryption.rs  mod.rs  protocol.rs  server.rs
standalone_server/: Cargo.toml  README.md  deploy.sh  render.yaml
standalone_server/src/: constants.rs  http_tunnel.rs  lib.rs  logging_filter.rs  main.rs  messages.rs  protocol_detect.rs  server.rs
standalone_server/src/lib/: client.rs  http.rs  logger.rs  mod.rs  protocol.rs  websocket.rs
tagio_relay_server/: .gitignore  Cargo.toml  Dockerfile  README.md  render.yaml
tagio_relay_server/src/: constants.rs  main.rs  messages.rs  server.rs
