[package]
name = "tagio"
version = "0.1.0"
edition = "2021"
authors = ["TagIO Team"]
description = "Remote desktop application with NAT traversal"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
iced = { version = "0.10.0", features = ["tokio", "image"] }
futures = "0.3.30"
thiserror = "1.0.56"
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.77"
local-ip-address = "0.5.6"
# TLS dependencies
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
tokio-rustls = "0.24.1"
webpki-roots = "0.25.2"  # Root certificates

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort" 