[package]
name = "atk-sys"
version = "0.18.2"
edition = "2021"
description = "Dummy implementation of atk-sys for server builds"
license = "MIT"

[lib]
name = "atk_sys"
path = "src/lib.rs"

# Define features to satisfy dependencies
[features]
v2_34 = []
dox = []

# Empty dependencies - we're not actually using any external crates
[dependencies] 