[package]
name = "gtk-sys"
version = "0.18.2"
edition = "2021"
description = "Dummy implementation of gtk-sys for server builds"
license = "MIT"

[lib]
name = "gtk_sys"
path = "src/lib.rs"

# Define features to satisfy dependencies
[features]
v3_24 = []
dox = []

# Empty dependencies - we're not actually using any external crates
[dependencies] 