[package]
name = "pango-sys"
version = "0.18.2"
edition = "2021"
description = "Dummy implementation of pango-sys for server builds"
license = "MIT"

[lib]
name = "pango_sys"
path = "src/lib.rs"

# Define features to satisfy dependencies
[features]
v1_42 = []
dox = []

# Empty dependencies - we're not actually using any external crates
[dependencies] 