[package]
name = "tagio_relay_server"
version = "0.1.9"
edition = "2021"
authors = ["TagIO Team"]
description = "TagIO Relay Server - Standalone NAT traversal server for TagIO"

[features]
default = ["server"]
server = []

[dependencies]
# Core async runtime
tokio = { version = "1.33.0", features = [
    "rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"
]}
# Error handling
anyhow = "1.0.75"
# Serialization
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.108"
# Logging
log = "0.4.20"
env_logger = "0.10.0"
# NAT traversal - necessary for peer connections
socket2 = "0.5.9"
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }
# IP address utilities
local-ip-address = "0.5.6"
# HTTP client for public IP detection
ureq = "2.9.1"
# Misc utilities
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
once_cell = "1.18.0"

# EXPLICITLY EXCLUDE GUI DEPENDENCIES
# These cause problems with the GTK dependencies on Render
rfd = { version = "0.0.0", optional = true } # Dummy version to prevent inclusion
egui = { version = "0.0.0", optional = true } # Dummy version to prevent inclusion
eframe = { version = "0.0.0", optional = true } # Dummy version to prevent inclusion

[profile.release]
opt-level = "z"     # Optimize for size, not speed
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Use a single codegen unit for better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Remove panic unwinding code
overflow-checks = false  # Disable integer overflow checks
debug = false       # No debug info at all

# Optimize dependencies as well
[profile.release.package."*"]
opt-level = "z"     # Optimize all dependencies for size too
debug = false 