[package]
name = "tagio_relay_server"
version = "0.1.9"
edition = "2021"
authors = ["TagIO Team"]
description = "TagIO Relay Server - Standalone NAT traversal server for TagIO"

[features]
default = ["server"]
server = []

[dependencies]
# Core async runtime
tokio = { version = "1.33.0", features = [
    "rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"
]}
# Error handling
anyhow = "1.0.75"
thiserror = "1.0.50"
# Serialization
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.108"
# Logging
log = "0.4.20"
env_logger = "0.10.0"
# NAT traversal - necessary for peer connections
socket2 = "0.5.9"
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }
# IP address utilities
local-ip-address = "0.5.6"
# HTTP client for public IP detection
ureq = "2.9.1"
# Misc utilities
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
once_cell = "1.18.0" 